<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_background"
    tools:context=".Activity.LoginActivity">

    <ImageView
        android:id="@+id/imgLoginLogo"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:src="@drawable/ic_app_logo" />

    <EditText
        android:id="@+id/etPhoneDet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/imgLoginLogo"
        android:layout_marginHorizontal="15dp"
        android:layout_marginTop="25dp"
        android:background="@color/white"
        android:drawableStart="@drawable/ic_phone_icon"
        android:hint="@string/enter_phone_number"
        android:inputType="phone"
        android:padding="6dp" />

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/etPhoneDet"
        android:layout_marginHorizontal="15dp"
        android:layout_marginTop="15dp"
        android:background="@color/white"
        android:drawableStart="@drawable/ic_pass_icon"
        android:hint="@string/enter_password"
        android:inputType="textPassword"
        android:padding="6dp" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/etPassword"
        android:layout_marginHorizontal="15dp"
        android:layout_marginTop="10dp"
        android:backgroundTint="@color/button_color"
        android:text="@string/log_in"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txtForgot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/btnLogin"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/forgot_password"
        android:textColor="@color/white"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/txtRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="5dp"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/sign_up"
        android:textColor="@color/white"
        android:textSize="15sp" />
</RelativeLayout>