<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_background"
    tools:context=".Activity.ForgotPassword">

    <ImageView
        android:id="@+id/imgLogoForgot"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:src="@drawable/ic_app_logo" />

    <TextView
        android:id="@+id/txtInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/imgLogoForgot"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="20dp"
        android:text="@string/entered_registered_mobile_number_and_email_address"
        android:textColor="@color/white"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/etEmailForgot"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtInfo"
        android:layout_marginHorizontal="15dp"
        android:layout_marginTop="15dp"
        android:background="@color/white"
        android:drawableLeft="@drawable/ic_phone_icon"
        android:hint="@string/enter_mobile_number1"
        android:inputType="phone"
        android:padding="6dp" />

    <EditText
        android:id="@+id/etMobForgot"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/etEmailForgot"
        android:layout_marginHorizontal="15dp"
        android:layout_marginTop="16dp"
        android:background="@color/white"
        android:drawableLeft="@drawable/ic_email_icon"
        android:hint="@string/enter_email_address1"
        android:padding="6dp" />

    <Button
        android:id="@+id/btnForgotPass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/etMobForgot"
        android:layout_marginHorizontal="15dp"
        android:layout_marginTop="15dp"
        android:backgroundTint="@color/button_color"
        android:text="@string/submit_details"
        android:textColor="@color/white"
        android:textStyle="bold" />

</RelativeLayout>